; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_dump/extr_compress_io.c_ReadDataFromArchive.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_dump/extr_compress_io.c_ReadDataFromArchive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COMPR_ALG_NONE = common dso_local global i64 0, align 8
@COMPR_ALG_LIBZ = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [28 x i8] c"not built with zlib support\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ReadDataFromArchive(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @ParseCompressionOption(i32 %8, i64* %7, i32* null)
  %10 = load i64, i64* %7, align 8
  %11 = load i64, i64* @COMPR_ALG_NONE, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @ReadDataFromArchiveNone(i32* %14, i32 %15)
  br label %17

17:                                               ; preds = %13, %3
  %18 = load i64, i64* %7, align 8
  %19 = load i64, i64* @COMPR_ALG_LIBZ, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = call i32 @fatal(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  br label %23

23:                                               ; preds = %21, %17
  ret void
}

declare dso_local i32 @ParseCompressionOption(i32, i64*, i32*) #1

declare dso_local i32 @ReadDataFromArchiveNone(i32*, i32) #1

declare dso_local i32 @fatal(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
